package Enums;

public enum EstadoVehiculo {
    TODOS,
    DISPONIBLE,
    ALQUILADO,
    EN_MANTENIMIENTO;
}
