package Enums;

public enum MarcasMoto {
    HONDA, 
    YAMAHA, 
    SUZUKI, 
    KAWASAKI,
    BMW,
    DUCATI,
    MOTOMEL;
}
