package Enums;


public enum TipoCombustible {
    NAFTA, 
    DIESEL, 
    ELECTRICO, 
    HIBRIDO;
}
