package Enums;

public enum TipoVehiculos {
    AUTO,
    MOTO,
    CAMIONETA,
    TODOS;
}
