package Enums;

public enum MarcasAuto {
     //Autos
    FORD, 
    CHEVROLET, 
    TOYOTA, 
    VOLKSWAGEN,
    BMW,
    FIAT,
    RENAULT,
    NISSAN,
    PEUGEOT;
}
