package Enums;

public enum MarcasCamioneta {
    RENAULT, 
    NISSAN, 
    JEEP, 
    DODGE, 
    RAM;
}